refactor(ui): replace logo

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -16,7 +16,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "/assets/photoview-logo.svg",
+      "src": "/assets/logo.svg",
       "sizes": "150x150"
     }
   ]
